# spacefighters

./: CMakeLists.txt  README.md  main.cpp
SFML-2.5.1-Compiled/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
SFML-2.5.1-Compiled/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
res/: splashscreen.psd  splashscreen2.psd
src/: AssetManager.cpp  AssetManager.hpp  Asteroid.cpp  Asteroid.hpp  Constants.hpp  Controller.cpp  Controller.hpp  GameManager.cpp  GameManager.hpp  Model.cpp  Model.hpp  Screen.hpp  ScreenManager.cpp  ScreenManager.hpp  SpaceButton.cpp  SpaceButton.hpp  Spaceship.cpp  Spaceship.hpp  View.cpp  View.hpp
src/GameScreen/: Asteroid.cpp  Asteroid.hpp  Collision.cpp  Collision.hpp  GameScreen.cpp  GameScreen.hpp  Missile.cpp  Missile.hpp  Monster.cpp  Monster.hpp  Spaceship.cpp  Spaceship.hpp
src/MenuScreen/: MenuScreen.cpp  MenuScreen.hpp
src/SplashScreen/: SplashScreen.cpp  SplashScreen.hpp
src/Utils/: SpaceButton.cpp  SpaceButton.hpp  SpaceHeader.cpp  SpaceHeader.hpp
